--- a/styles.css
+++ b/styles.css
@@ -6,19 +6,33 @@
     text-decoration:none;
     list-style-type: none;
     font-family: 'Kanit', sans-serif;
+    @media (max-width:1030px)
+.body
+{
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    height:auto;  
+}   
+
 }
 .header{
     background-color: #005f73;
     width: 100%;
-     height: 100px;
+    height: 80px;
     padding: 0px 30px 0px 10px;
-    font-size:large 
+    font-size:large;
+    position: fixed;
+    top:0px;
+    z-index: 1;
+
 }
 .logopagina {
+    display: flex;
     font-size: 30px;
     margin: 20px 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 700;
+    font-weight: 600;
     color: black;
 }
 
@@ -27,6 +41,15 @@
     justify-content: space-between;
     
 }
+ .nav i 
+ {
+    font-size: 36px;
+    display: none;
+ }
+ #toggle-menu
+ {
+    display: none;  
+ }
 .navmenu{   
      display: flex;
     margin-right: 10px
@@ -45,6 +68,7 @@
 }
 .hero
 { 
+margin-top: 100px;
 margin: 30px 30px 0px;
 width: 90%;   
 padding: 20px;         
@@ -54,14 +78,12 @@ justify-content:space-between;
 }   
 .imagen_portada
 {
+    margin-top: 100px;
     width:auto;
     height: auto;
     max-width: 400px;
     max-height: 400px ;
 }
- 
-
-
 
 .slogan
 {
@@ -98,3 +120,160 @@ align-items: center;
 justify-content:center;   
 flex-direction: column;
 }
+.container{
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    align-items: center;
+}
+
+.topcard
+{ display: flex;
+    justify-content: center;
+
+
+}
+
+.leftcolumn
+{
+    background-color: #005f73;
+    color: whitesmoke;
+    border-radius: 1rem;
+    display: flex;
+    margin: 1.5rem;
+    width: auto;
+    height: auto;
+    padding: 20px;
+}
+.centercolumn
+{
+    background-color:#005f73;
+    color: whitesmoke;
+    border-radius: 1rem;
+    display: flex;
+    margin: 1.5rem;
+    width: auto;
+    height: auto;
+    padding: 20px;
+
+}
+.rightcolumn
+{
+    background-color:#005f73;
+    color: whitesmoke;
+    border-radius: 1rem;
+    display: flex;
+    margin: 1.5rem;
+    width: auto;
+    height: auto;  
+    padding: 20px;
+
+}
+
+.logo_footer
+{
+    display: flex;
+    align-items: center;
+    max-height: 100px;
+    justify-content:flex-start
+}
+
+.logoig
+{
+font-size: 30px;
+padding-top: 10px;
+margin-top: 10px;
+margin-left: 5px;
+width: 40px;
+}
+
+.logofb{
+    font-size: 30px;
+padding-top: 10px;
+margin-top: 10px;
+margin-right: 5px;
+width: 40px
+}
+@media (max-width:992px)
+{
+    .hero
+    {
+        text-align: center;
+        width: 90%;
+        align-items: center;
+    }   
+    .logopagina 
+    {
+        font-size: x-large;
+
+    }
+
+.hero h1 
+{
+display: block;
+width: 100%;   
+}
+.hero p 
+{
+max-width: 100%;   
+max-width: 80%;
+font-size: 16px; 
+}
+.button_temporada
+{
+    justify-content: center;
+}
+.imagen_portada
+{
+display:none;    
+}
+}
+
+@media (max-width:576px){
+    .logopagina {
+        font-size:x-large; 
+        margin-bottom: 50px;
+        padding-bottom: 20px;
+    }
+
+    .slogan
+    {
+      align-items: center;
+      
+    }
+
+.nav ul {
+    background-color: white;
+    width: 100%;
+    height: calc(100%- 80px);
+    position: absolute;
+    top: 80px;
+    left: 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transform:translateX(200%);
+    transition: all 0.3s ease-out;      
+}
+.nav i 
+{
+    display: block;
+
+
+}
+#toogle-menu:checked ~ .navmenu
+{
+transform:translateX(0%);
+transition: all 0.4s ease-in;
+}
+
+.hero p
+{
+    max-width: 100%;
+}
+
+.hero h1 
+{
+max-width: 100%;    
+}
+}    
